tests/baselines/reference/declareAlreadySeen.errors.txt
declareAlreadySeen.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declareAlreadySeen.ts(2,13): error TS1030: 'declare' modifier already seen.
declareAlreadySeen.ts(3,13): error TS1030: 'declare' modifier already seen.
declareAlreadySeen.ts(5,13): error TS1030: 'declare' modifier already seen.
declareAlreadySeen.ts(5,28): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declareAlreadySeen.ts(7,13): error TS1030: 'declare' modifier already seen.


==== declareAlreadySeen.ts (6 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        declare declare var x;
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
        declare declare function f();
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
    
        declare declare module N { }  
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
                               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        declare declare class C { }
                ~~~~~~~
!!! error TS1030: 'declare' modifier already seen.
    }